--- a/FinalProject/Web.config
+++ b/FinalProject/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,10 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-FinalProject-20230124092126.mdf;Initial Catalog=aspnet-FinalProject-20230124092126;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="FinalProjectContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=FinalProjectContext-20230124212357; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|FinalProjectContext-20230124212357.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-FinalProject-20230124092126.mdf;Initial Catalog=aspnet-FinalProject-20230124092126;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="FinalProjectContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=FinalProjectContext-20230124212357; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|FinalProjectContext-20230124212357.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
