--- a/FinalProject/FinalProject.csproj
+++ b/FinalProject/FinalProject.csproj
@@ -188,6 +188,10 @@
     <Compile Include="Migrations\202301242326359_SecondCreate.designer.cs">
       <DependentUpon>202301242326359_SecondCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202301270455211_max-duration-4.cs" />
+    <Compile Include="Migrations\202301270455211_max-duration-4.designer.cs">
+      <DependentUpon>202301270455211_max-duration-4.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Event.cs" />
@@ -262,6 +266,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -285,6 +290,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202301242326359_SecondCreate.resx">
       <DependentUpon>202301242326359_SecondCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202301270455211_max-duration-4.resx">
+      <DependentUpon>202301270455211_max-duration-4.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
